update checkbox css

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ table {
   width: 100%;
 }
 label {
-  padding: 3px;
+  padding: 5px 5px;
   font-size: 18px;
 }
 .countrylist
@@ -115,7 +115,7 @@ tr:nth-child(odd) {background-color: #c8c8ff;}
     </label>
     <label>
       <input type="checkbox" class="countrylist" name="countrylist" value="Thailand" checked> Thailand</label>
-    </label>
+    </label><br><br>
 
     Select scope <select id="max">
       <option value="4">4</option>
