--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@ tr:nth-child(odd) {background-color: #c8c8ff;}
     </label><br><br>
 
     Select scope <select id="max">
-      <option value="4">4</option>
-      <option value="5">5</option>
-      <option value="6">6</option>
-      <option value="7">7</option>
-      <option value="8">8</option>
-      <option value="9">9</option>
+      <option value="4">4</option><option value="5">5</option><option value="6">6</option>
+      <option value="7">7</option><option value="8">8</option><option value="9">9</option>
+      <option value="10">10</option><option value="11">11</option><option value="12">12</option>
+      <option value="13">13</option><option value="14">14</option><option value="15">15</option>
+      <option value="16">16</option><option value="17">17</option><option value="18">18</option>
+      <option value="19">19</option>
       <option value="?" selected>MAX</option>
     </select> days.
     <button id="loaddata" class="button" name="loaddata" onClick="loadFile();">Load data</button><br>
