--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
+<!DOCTYPE HTML>
 <html>
 <head>
-  <title>Coronavirus COVID-19 (2019-nCoV) Data</title>
+<html lang="en">
+<meta charset=utf-8>
+<link rel="shortcut icon" href="/favicon.ico">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=0" />
+  <title>Coronavirus COVID-19 by @windygallery</title>
 <script src="jquery-csv.js"></script>
 <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> -->
 <script src="jquery-3.3.1.min.js"></script>
