--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@ tr:nth-child(odd) {background-color: #c8c8ff;}
     <label>
       <input type="checkbox" class="countrylist" name="countrylist" value="Singapore" > Singapore</label>
     </label>
-    <label>
+    <!-- <label>
       <input type="checkbox" class="countrylist" name="countrylist" value="Netherlands" > Netherlands</label>
-    </label>
+    </label> -->
     <label>
       <input type="checkbox" class="countrylist" name="countrylist" value="Spain" checked> Spain</label>
     </label>
@@ -97,12 +97,12 @@ tr:nth-child(odd) {background-color: #c8c8ff;}
     <label>
       <input type="checkbox" class="countrylist" name="countrylist" value="Pakistan"> Pakistan</label>
     </label>
-    <label>
+    <!-- <label>
       <input type="checkbox" class="countrylist" name="countrylist" value="Israel" > Israel</label>
-    </label>
-    <label>
+    </label> -->
+    <!-- <label>
       <input type="checkbox" class="countrylist" name="countrylist" value="Brazil" > Brazil</label>
-    </label>
+    </label> -->
     <label>
       <input type="checkbox" class="countrylist" name="countrylist" value="US" checked> US</label>
     </label>
@@ -124,7 +124,10 @@ tr:nth-child(odd) {background-color: #c8c8ff;}
       <option value="10">10</option><option value="11">11</option><option value="12">12</option>
       <option value="13">13</option><option value="14">14</option><option value="15">15</option>
       <option value="16">16</option><option value="17">17</option><option value="18">18</option>
-      <option value="19">19</option>
+      <option value="19">19</option><option value="20">20</option><option value="21">21</option>
+      <option value="22">22</option><option value="23">23</option><option value="24">24</option>
+      <option value="25">25</option><option value="26">26</option><option value="27">27</option>
+      <option value="28">28</option><option value="29">29</option><option value="30">30</option>
       <option value="?" selected>MAX</option>
     </select> days.
     <button id="loaddata" class="button" name="loaddata" onClick="loadFile();">Load data</button><br>
@@ -304,7 +307,7 @@ google.charts.setOnLoadCallback(loadFile);
   Source data: <a href="https://github.com/CSSEGISandData/COVID-19">Coronavirus COVID-19 Data Repository by Johns Hopkins CSSE</a> |
   <a href="https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_confirmed_global.csv" target="_blank">(Raw data)</a>
   <br><br>
-<style="color:#CCCCCC; font-family: monospace,monospace; font-size: 1em; ">Coding v.2.1.0 by
+<style="color:#CCCCCC; font-family: monospace,monospace; font-size: 1em; ">Coding v.2.2.0 by
 <a href="https://github.com/windyberry/covid19">@windygallery</a> 2020</style>
 <br><br>
   </center>
