Update unit test for analyzing cases

--- a/cases.html
+++ b/cases.html
@@ -10,88 +10,10 @@
 .new     {  color: #0000aa;  font-size: 9pt; }
 .pass    {  color: #225522;  font-size: 9pt; }
 .unknown {  color: #666666; }
+img { height: 25px; }
 </style>
-<!-- <script src="jquery-3.3.1.min.js"></script> -->
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-<script>
 
-// 0. ยังระบุไม่ได้?
-// 1. กลุ่มเดินทางไปต่างประเทศ
-// 2. กลุ่มสัมผัสกับชาวต่างชาติ
-// 3. กลุ่มที่ข่าวสนใจ
-// 4. กลุ่มหมอและพยาบาล
-// 5. กลุ่มภายในประเทศ
-// let groupNames = ['รอการตรวจสอบ', //0
-// 'เดินทางไปต่างประเทศ',  //1
-// 'สัมผัสกับชาวต่างชาติ',   //2
-// 'หมอและพยาบาล',   //3
-// 'ติดภายในประเทศ',   //4
-// 'สนามมวย',    //5
-// 'สนามบันเทิง',  //6
-// 'คนดัง/แบรนด์'  //7
-// ];
-//
-// var unknown  = []; // 0
-// var move     = ['จากต่างประเทศ','เดินทางมาจาก','เดินทางกลับจาก','เดินทาง','นักท่องเที่ยว',
-//   'ดูงานที่ประเทศ','อู่ฮั่น','คัดกรองจากสนามบิน','คนไทยกลับบ้าน','สนามบินสุวรรณภูมิผ่านด่านคัดกรอง',
-//   'อิตาลี','ญี่ปุ่น','สเปน','มาเลเซีย','มาเลเชีย','อินโดนีเซีย','ฝรั่งเศส','เดนมาร์ก','กัมพูชา',
-//   'สวิตเซอร์แลนด์','เบลเยี่ยม','สหรัฐอเมริกา','ฝรั่งเศส','จากพื้นที่ระบาด','เข้าประเทศ',
-//   'ติดจากต่างประเทศ']; //1
-// var bridge   = ['ใกล้ชิดกับนักท่องเที่ยวต่างชาติ','ติดจากนักท่องเที่ยว','รับนักท่องเที่ยว','ขับรถ',
-//   'ให้บริการชาวต่างชาติ','ให้บริการนักท่องเที่ยว','ใกล้ชิดชาวต่างชาติ','รับผู้โดยสารต่างชาติ','เพื่อนต่างชาติ',
-//   'ทำงานกับต่างชาติ','พนักงานต้อนรับบนเครื่องบิน','อาชีพเสี่ยงต่อการติดเชื้อ','เกี่ยวกับต่างชาติ','ตำรวจตรวจคนเข้าเมือง',
-//   'ใกล้ชิดต่างชาติ','คนขับTaxi','เกี่ยวกับชาวต่างชาติ','มีนักท่องเที่ยวต่างชาติ','เจ้าหน้าที่สนามบิน']; //2
-// var boxing    = ['สนามมวย','นักมวย']; //5
-// var entertain = ['ทองหล่อ','สถานบันเทิง','ทองหล่อ']; //5
-// var wellknown = ['นักแสดง','คิงเพาเวอร์']; //5
-// var doctor   = ['บุคลากรทางการแพทย์','บุคลากรการแพทย์']; //3
-// var intenal  = ['รับเชื้อจากผู้ป่วย','ลูกสาวของ','สามีของ','หลานของ','น้องชายของ','สัมผัสใกล้ชิดกับผู้ป่วย',
-//   'เพื่อนของผู้ป่วย','มารดาของผู้ป่วย','ลูกจ้างของผู้ป่วย','ใกล้ชิดผู้ป่วย','ติดเชื้อต่อเนื่อง','สัมผัสผู้ป่วย',
-//   'ผู้สัมผัสของผู้ป่วย','ติดจากการสัมผัส','สัมผัสกับผู้ป่วย','สถานที่แออัด','ในครอบครัว',
-//   'ขนส่งสาธารณะ','ชุมนุมชน','สาเหตุอื่น'] //4
-//
-// var cMove  = new RegExp(move.join("|"));
-// var cBrid  = new RegExp(bridge.join("|"));
-// var cBoxi  = new RegExp(boxing.join("|"));
-// var cEnte  = new RegExp(entertain.join("|"));
-// var cWell  = new RegExp(wellknown.join("|"));
-// var cDoct  = new RegExp(doctor.join("|"));
-// var cInte  = new RegExp(intenal.join("|"));
-//
-// function testGroup(str) {
-//   str = str.replace(/\s/g, '');
-//   let group = 0;
-//   if (cDoct.test(str)) {        group = 3;  } // เจอหมอ ชัดเจน
-//   else if (cBoxi.test(str)) {   group = 5;  } // เจอคำเฉพาะ ชัดเจน
-//   else if (cEnte.test(str)) {   group = 6;  } // เจอคำเฉพาะ ชัดเจน
-//   else if (cWell.test(str)) {   group = 7;  } // เจอคำเฉพาะ ชัดเจน
-//   else if (cBrid.test(str)) {   group = 2;  }
-//   else if (cInte.test(str)) {   group = 4;  }
-//   else if (cMove.test(str)) {   group = 1;  }
-//   // document.write(group+":"+unescape(str))
-//   return group
-// }
-// // testGroup("เดินทางมาจากเมืองอู่ฮั่นตั้งแต่วันที่ 3 มกราคม");
-// // testGroup("นักท่องเที่ยวชาวจีน");
-// // testGroup("เป็นคนขับแท็กซี่ โดยระหว่างวันที่ 14 ม.ค.");
-// // testGroup("คู่สามีภรรยาชาวไทยที่เดินทางกลับมาจากญี่ปุ่น");
-// // testGroup("ชาวจีน");
-// // testGroup("จากผู้ป่วยรายที่ 27");
-//
-// function countCase(str) {
-//   total = 1;
-//   let found = str.indexOf("-");
-//   if (found > -1) {
-//     var res = str.split("-");
-//     if (res.length == 2) {
-//       total = parseInt(res[1]) - parseInt(res[0]) + 1;
-//     }
-//   }
-//   return total;
-// }
-</script>
-<!-- <script src="data-2020-03-31.js" crossorigin="anonymous"></script>
-<script src="timeline/windyanalyzer.js" crossorigin="anonymous"></script> -->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script>
 // console.log("case:");
 // console.log(data_case);
@@ -136,148 +58,17 @@
 // to_name: "ไทย"
 // to_name_en: "Thailand"
 // image: "/upload/network/20200328_s_N4UL6uw8nb.jpg"
-
 </script>
-
 <body>
   <h1>COVID19 Infection in Thailand (Relationship)</h1>
 <div id="cases">
 </div>
 
-<script src="data-2020-03-31.js" crossorigin="anonymous"></script>
+<script src="data-2020-04-05.js" crossorigin="anonymous"></script>
 <script src="timeline/windyanalyzer.js" crossorigin="anonymous"></script>
-<!-- <hr> -->
-<!-- <div id="relations">
-</div>
-<hr>
-<div id="places">
-</div> -->
+
 <script>
 printAllcases();
-//
-// let grouping = [];
-// let unittest = {
-//   "1":1,"2":1,"3":1,"4":1,"5":1,"6":1, "7":1, "8":1, "9 - 14":1,"15":1,"16":2,"17":1,
-//   "18 - 19":1,"20 - 21":1,"22":0,"23":2,"24":0,"25":2,"26":0,"27":7,"28":0,"29":0,
-//   "30":0,"31":7,"32":1,"34":3, "35":4,"37":2,"38 - 39":1,"41":1, "42":2, "43":2,
-//   "44":1,"45":1,"46":1,"47":1,"49":1,"50":1,"51":4,"52":1,"53":4,"57":1,"58":1,
-//   "59":2,"73":4,"74 - 75":4,"76":4,"77":1,"78":4,"79":4,"80":4,"81":1,"82":7,
-//   "83 - 91":5,"48":1,"56":1,"60 - 72":2,"93 - 94":6,"95 - 99":6,"100 - 102":2,
-//   "110 - 111":4,"112":1,"113 - 114":0,"115 - 121":5,"122 - 124":6,"125 - 130":4,
-//   "134 - 136":1,"137 - 142":2,"143 - 145":1,"146 - 147":1,"148 - 158":5,"159":6,
-//   "160 - 161":4,"171":2,"172 - 177":0,"178-190":5,"191-194":6,"195-206":4,
-//   "207":1,"208-211":2,"212":0,"213-224":5,"225-238":6,"239-250":4,"251-255":1,
-//   "256-264":1,"265":2,"266":2,"267":2,"268":4,"269-272":0,"273-290":5,
-//   "291-295":6,"296-307":4,"308-313":1,"314":1,"315":1,"318-319":2,"320-322":0,
-//   "323-354":5,"355-356":6,"357-362":1,"363-373":4,"392-411":0,"412-432":5,
-//   "433-437":6,"438-439":1,"440-476":4,"477-481":1,"482":1,"483-484":1,
-//   "485-491":5,"492-599":0,"600-603":5,"604-619":4,"620-621":1,"622":1,"623":1,
-//   "624":1,"632-721":0,"722-726":5,"727-732":6,"733-744":4,"745-746":1,
-//   "755-764":2,"765-768":3,"769-780":1,"781-827":0,"832-836":6,"837-850":4,
-//   "851-854":1,"855-856":1,"857":1,"858":1,"859":1,"860":1,"861-865":2,
-//   "866-867":3,"868-934":0,"935-940":5,"941-943":6,"944-962":4,"963":1,
-//   "964":1,"965":1,"966-967":1,"968":2,"969":1,"970-978":2,"979-981":3,
-//   "982":0,"983-1023":0,"1024":1,"1025-1028":0,"1029":4,"1030":0,"1031":4,
-//   "1032":0,"1033-1037":4,"1038-1040":0,"1041-1044":4,"1045":0,"1046-1050":5,
-//   "1051-1057":6,"1058-1075":4,"1095-1136":0,"92":6,"828-831":5,"316-317":1,
-//   "374-385":1,"386-391":6,"40":4,"625-631":2,"103 - 109":1,"131 - 133":1,
-//   "162 - 167":1,"168 - 170":1,"747-754":1,"1076-1085":1,
-//   "1086-1094":2,"36":4,"54":2,"55":2,"33":4,
-// };
-//
-// // 0=true, 1=false, 2=new (no unit test yet)
-// function validateunittest(key, expectedgroup) {
-//   result = 2;
-//   if (unittest[key] != undefined) {
-//     if (unittest[key] == expectedgroup) { result = 0; }
-//     else {  result = 1; }
-//   }
-//   if (result == 2) {
-//     console.log(key+" : "+unittest[key]+" vs. "+expectedgroup+" = "+result+" !!");
-//   }
-//   return result;
-// }
-//
-// function printCase(element) {
-//   let detailTh = unescape(element.detail_th);
-//   let group    = testGroup(detailTh);
-//   let count    = countCase(element.rid);
-//   // let text     = element.confirm_at+" [<b>"+group+"</b>] "+element.rid+"("+count+") : "+detailTh+"<br>\n";
-//   // let text     = element.confirm_at+" \""+element.rid+"\":<b>"+group+"</b> ("+count+") : "+detailTh+"<br>\n";
-//   let highlight  = " class='unknown' ";
-//   let unittest   = validateunittest(element.rid, group)
-//   if (unittest == 1){
-//     highlight = " class='error' ";
-//   }
-//   else if (unittest == 0){
-//     highlight = " class='pass' ";
-//   }
-//   else if (unittest == 2){
-//     highlight = " class='new' ";
-//   }
-//   let text     = "<div "+highlight+">"+element.confirm_at+" "+element.rid+":<b>"+group+"</b>, ("+count+") : "+detailTh+"</div>\n";
-//   let keyGroup = ""+group
-//   if (grouping.hasOwnProperty(keyGroup)) {
-//     grouping[keyGroup] += "<div "+highlight+"> - "+detailTh+"</div>\n";
-//   }
-//   else {
-//     grouping[keyGroup] = "<div "+highlight+">- "+detailTh+"</div>\n";
-//   }
-//   return text;
-// }
-//
-// function printLink(e) {
-//   let text = e.report_id+":"+e.from_refid+" ("+e.to_name+")<br>\n";
-//   return text;
-// }
-//
-// function printWhere(e) {
-//   let text = e.created_at+" : "+e.id+":"+e.from_name+" ("+e.location_from_id+" -> "+e.location_to_id+")<br>\n";
-//   return text;
-// }
-// allcases = "";
-// data_case.reverse().forEach(
-//     (element, index) =>
-//     allcases += printCase(element)
-// )
-// $("#cases").html(allcases);
-
-// var unknown  = []; // 0
-// var move     = ['เดินทาง','นักท่องเที่ยว','เข้าประเทศ','ดูงานที่ประเทศ','อู่ฮั่น','คัดกรองจากสนามบิน','คนไทยกลับบ้าน','สนามบินสุวรรณภูมิผ่านด่านคัดกรอง','กลับจากญี่ปุ่น','สเปน','มาเลเซีย','มาเลเชีย','อินโดนีเซีย','ฝรั่งเศส','เดนมาร์ก','กัมพูชา','สวิตเซอร์แลนด์']; //1
-// var bridge   = ['ใกล้ชิดกับนักท่องเที่ยวต่างชาติ','ติดจากนักท่องเที่ยว','รับนักท่องเที่ยว','ขับรถ','ให้บริการชาวต่างชาติ','ให้บริการนักท่องเที่ยว','ใกล้ชิดชาวต่างชาติ','รับผู้โดยสารต่างชาติ','เพื่อนต่างชาติ','ทำงานกับต่างชาติ','จากต่างประเทศ','พนักงานต้อนรับบนเครื่องบิน','อาชีพเสี่ยงต่อการติดเชื้อ','ทำงานใกล้ชิดต่างชาติ']; //2
-// var doctor   = ['บุคลากรทางการแพทย์']; //3
-// var intenal  = ['รับเชื้อจากผู้ป่วย','ลูกสาวของ','สามีของลูกสาว','หลานของผู้ป่วย','น้องชายของผู้ป่วย','เพื่อนของผู้ป่วย','มารดาของผู้ป่วย','ลูกจ้างของผู้ป่วย','ใกล้ชิดผู้ป่วย','ติดเชื้อต่อเนื่อง','สัมผัสผู้ป่วย','ผู้สัมผัสของผู้ป่วย','ติดจากการสัมผัส','สัมผัสกับผู้ป่วย','สถานบันเทิง','สถานที่แออัด'] //4
-// var focus    = ['นักแสดง','สนามมวย','คิงเพาเวอร์','ทองหล่อ','นักมวย']; //5
-
-
-// for (const [key, value] of Object.entries(grouping)) {
-//   // console.log(key, value);
-//   document.write("<h2>"+groupName[key]+":</h2>"+value)
-// }
-// console.log(allcases);
-
-// related = "";
-// data_relate.forEach(
-//     (element, index) =>
-//     related += printLink(element)
-// )
-// $("#relations").html(related);
-//
-//
-// places = "";
-// data_place.forEach(
-//     (element, index) =>
-//     places += printWhere(element)
-// )
-// $("#places").html(places);
 </script>
-<!--
-1. กลุ่มเดินทางไปต่างประเทศ
-2. กลุ่มสัมผัสกับชาวต่างชาติ
-4. กลุ่มหมอและพยาบาล
-3. กลุ่มภายในประเทศ
-5. กลุ่มน่าสนใจพิเศษ
-0. ยังระบุไม่ได้?
--->
 </body>
 </html>
